--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "@types/leaflet.editable.importable",
   "version": "1.0.0",
-  "description": "types for Leaflet.Editable.Importable",
-  "main": "index.js",
-  "scripts": {
-    "test": "test"
-  },
+  "description": "TypeScript definitions for Leaflet.Editable.Importable",
+  "main": "",
+  "types": "index.d.ts",
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/KapaJo/Leaflet.Editable.types.git"
@@ -18,5 +17,6 @@
   "homepage": "https://github.com/KapaJo/Leaflet.Editable.types#readme",
   "dependencies": {
     "geojson": "^0.5.0"
-  }
+  },
+  "typeScriptVersion": "3.9"
 }
